# mini-compiler

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  ast.h  cmake_install.cmake  codeGen.cpp  codeGen.h  codeGen.hpp  main.cpp  parser.cpp  parser.hpp  parser.y  token.cpp  token.l  utils.hpp
test/: advisor  advisor.txt  matrix  matrix.txt  output.ll  quicksort  quicksort.txt
